--- a/login.html
+++ b/login.html
@@ -1,11 +1,11 @@
-﻿<form id="loginForm">
-	<div class="formGroup">
-		<label for="email">E-mail:</label><br />
-		<input type="text" id="email">
+<form id="loginForm">
+	<div class="form-group">
+		<label for="email">E-mail</label>
+		<input type="email" id="email" class="form-control" placeholder="E-mail">
 	</div>
-	<div class="formGroup">
-		<label for="email">Password:</label><br />
-		<input type="text" id="password">
+	<div class="form-group">
+		<label for="password">Password</label>
+		<input type="password" id="password" class="form-control" placeholder="Password">
 	</div>
-	<button type="submit" href="" class="greenLink">Login</button>
+	<a class="btn btn-primary btn-lg">Login</a>
 </form>
