--- a/start.html
+++ b/start.html
@@ -1,2 +1,2 @@
-﻿<a href="#register" class="routLink greenLink">Register</a>
-<a href="#login" class="routLink greenLink">Login</a>
+<a href="#register" class="btn btn-primary btn-lg">Register</a>
+<a href="#login" class="btn btn-primary btn-lg">Login</a>
