--- a/register.html
+++ b/register.html
@@ -1,15 +1,27 @@
-﻿<form id="registerForm">
-	<div class="formGroup">
-		<label for="name">Name:</label><br />
-		<input type="text" id="name">
+<form id="registerForm">
+	<div class="form-group name-group has-feedback">
+		<label for="name">Name</label>
+		<input type="text" id="name" class="form-control" placeholder="Name">
+		<span class="name-icon glyphicon form-control-feedback"></span>
+		<span class="name-message"></span>
 	</div>
-	<div class="formGroup">
-		<label for="email">E-mail:</label><br />
-		<input type="text" id="email">
+	<div class="form-group email-group has-feedback">
+		<label for="email">E-mail</label>
+		<input type="email" id="email" class="form-control" placeholder="E-mail">
+		<span class="email-icon glyphicon form-control-feedback"></span>
+		<span class="email-message"></span>
 	</div>
-	<div class="formGroup">
-		<label for="email">Password:</label><br />
-		<input type="text" id="password">
+	<div class="form-group password-group has-feedback">
+		<label for="password">Password</label>
+		<input type="password" id="password" class="form-control" placeholder="Password">
+		<span class="password-icon glyphicon form-control-feedback"></span>
+		<span class="password-message"></span>
 	</div>
-	<button type="submit" href="start.html" data-url="start" class="routLink greenLink">Register</button>
+	<div class="form-group confirm-password-group has-feedback">
+		<label for="password">Confirm password</label>
+		<input type="password" id="confirm-password" class="form-control" placeholder="Confirm password">
+		<span class="confirm-password-icon glyphicon form-control-feedback"></span>
+		<span class="confirm-password-message"></span>
+	</div>
+	<a class="btn btn-primary btn-lg">Register</a>
 </form>
