--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="css/style.css">
+        <script src="bower_components/jquery/dist/jquery.min.js"></script>
+        <script src="js/router.js"></script>
+        <script src="js/script.js"></script>
     	<title></title>
     </head>
     
@@ -15,9 +18,6 @@
         <div class="main">
 		</div>
 
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-        <script src="js/jquery.history.js"></script>
-        <script src="js/router.js"></script>
-        <script src="js/script.js"></script>
+        
     </body>	
 </html>
