--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <link rel="stylesheet" href="css/style.css">
         <script src="bower_components/jquery/dist/jquery.min.js"></script>
         <script src="js/router.js"></script>
+        <script src="js/validator.js"></script>
+        <script src="js/register.js"></script>
+        <script src="js/validation_options.js"></script>
         <script src="js/script.js"></script>
     	<title></title>
     </head>
