--- a/register.html
+++ b/register.html
@@ -1,4 +1,4 @@
-<form id="registerForm">
+﻿<form id="registerForm" no-validate = "">
 	<div class="form-group name-group has-feedback">
 		<label for="name">Name</label>
 		<input type="text" id="name" class="form-control" placeholder="Name">
@@ -23,5 +23,5 @@
 		<span class="confirm-password-icon glyphicon form-control-feedback"></span>
 		<span class="confirm-password-message"></span>
 	</div>
-	<a class="btn btn-primary btn-lg">Register</a>
+	<a id="registerBtn" class="btn btn-primary btn-lg">Register</a>
 </form>
