--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
         <link rel="stylesheet" href="css/style.css">
         <script src="bower_components/jquery/dist/jquery.min.js"></script>
         <script src="js/router.js"></script>
-        <script src="js/validator.js"></script>
-        <script src="js/register.js"></script>
-        <script src="js/validation_options.js"></script>
         <script src="js/script.js"></script>
+        <script src="js/validator.js"></script>
+        <script src="js/validation_options.js"></script>
+        <script src="js/RegisterCtrl.js"></script>
+        <script src="js/LoginCtrl.js"></script>
     	<title></title>
     </head>
     
@@ -17,6 +18,11 @@
 		<div class="header">
 			<h1>Application</h1>
 		</div>
+
+        <ul class="navigation nav nav-tabs">
+          <li role="presentation"><a href="#register">Register</a></li>
+          <li role="presentation"><a href="#login">Login</a></li>
+        </ul>
 		
         <div class="main">
 		</div>
