--- a/login.html
+++ b/login.html
@@ -1,11 +1,15 @@
-<form id="loginForm">
-	<div class="form-group">
+﻿<form id="loginForm" no-validate = "">
+	<div class="form-group email-group has-feedback">
 		<label for="email">E-mail</label>
 		<input type="email" id="email" class="form-control" placeholder="E-mail">
+		<span class="email-icon glyphicon form-control-feedback"></span>
+		<span class="email-message"></span>
 	</div>
-	<div class="form-group">
+	<div class="form-group password-group has-feedback">
 		<label for="password">Password</label>
 		<input type="password" id="password" class="form-control" placeholder="Password">
+		<span class="password-icon glyphicon form-control-feedback"></span>
+		<span class="password-message"></span>
 	</div>
-	<a class="btn btn-primary btn-lg">Login</a>
+	<a id="loginBtn" class="btn btn-primary btn-lg">Register</a>
 </form>
