--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script src="js/script.js"></script>
         <script src="js/validator.js"></script>
         <script src="js/validation_options.js"></script>
+        <script src="js/InputCtrl.js"></script>
         <script src="js/RegisterCtrl.js"></script>
         <script src="js/LoginCtrl.js"></script>
     	<title></title>
