--- a/register.html
+++ b/register.html
@@ -1,4 +1,4 @@
-﻿<form id="registerForm" no-validate = "">
+<form id="registerForm" no-validate = "">
 	<div class="form-group name-group has-feedback">
 		<label for="name">Name</label>
 		<input type="text" id="name" class="form-control" placeholder="Name">
