--- a/index.html
+++ b/index.html
@@ -4,14 +4,6 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="css/style.css">
-        <script src="bower_components/jquery/dist/jquery.min.js"></script>
-        <script src="js/router.js"></script>
-        <script src="js/script.js"></script>
-        <script src="js/validator.js"></script>
-        <script src="js/validation_options.js"></script>
-        <script src="js/InputCtrl.js"></script>
-        <script src="js/RegisterCtrl.js"></script>
-        <script src="js/LoginCtrl.js"></script>
     	<title></title>
     </head>
     
@@ -21,13 +13,27 @@
 		</div>
 
         <ul class="navigation nav nav-tabs">
-          <li role="presentation"><a href="#register">Register</a></li>
-          <li role="presentation"><a href="#login">Login</a></li>
+          <li><a href="#register">Register</a></li>
+          <li><a href="#login">Login</a></li>
         </ul>
 		
         <div class="main">
 		</div>
 
-        
+        <script src="bower_components/jquery/dist/jquery.min.js"></script>
+        <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>        
+        <script src="bower_components/Faker/build/build/faker.js"></script>
+        <script src="bower_components/bootbox/bootbox.js"></script>
+        <script src="js/navigation.js"></script>
+        <script src="js/validation_options.js"></script>
+        <script src="js/validator.js"></script>
+        <script src="js/database.js"></script>
+        <script src="js/AuthCtrl.js"></script>
+        <script src="js/modalLogout.js"></script>
+        <script src="js/InputCtrl.js"></script>
+        <script src="js/RegisterCtrl.js"></script>
+        <script src="js/LoginCtrl.js"></script> 
+        <script src="js/router.js"></script>
+        <script src="js/script.js"></script>
     </body>	
 </html>
