--- a/register.html
+++ b/register.html
@@ -23,5 +23,5 @@
 		<span class="confirm-password-icon glyphicon form-control-feedback"></span>
 		<span class="confirm-password-message"></span>
 	</div>
-	<a id="registerBtn" class="btn btn-primary btn-lg">Register</a>
+	<a href="#user" id="registerBtn" class="btn btn-primary btn-lg">Register</a>
 </form>
