--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     </head>
     
 	<body>
-		<div class="header">
+		<div class="header clearfix">
 			<h1>Application</h1>
+            <button class="initDB btn btn-sm btn-success" onclick="FillDatabase(5)">Init DB</button>
 		</div>
 
         <ul class="navigation nav nav-tabs">
