--- a/login.html
+++ b/login.html
@@ -11,5 +11,5 @@
 		<span class="password-icon glyphicon form-control-feedback"></span>
 		<span class="password-message"></span>
 	</div>
-	<a href="#user" id="loginBtn" class="btn btn-primary btn-lg">Register</a>
+	<a id="loginBtn" class="btn btn-primary btn-lg">Login</a>
 </form>
