--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -15,7 +15,7 @@
 
         <ul class="navigation nav nav-tabs">
           <li><a href="#register">Register</a></li>
-          <li><a href="#login">Login</a></li>
+          <li><a href="#login" class="loginLink">Login</a></li>
         </ul>
 		
         <div class="main">
