--- a/user.html
+++ b/user.html
@@ -1,3 +1,3 @@
 <h1>Hello, User</h1>
 
-<button class="logout btn btn-lg btn-primary">Logout</button>
+<!-- <button class="logout btn btn-lg btn-primary">Logout</button> -->
