--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		</div>
 
         <ul class="navigation nav nav-tabs">
-          <li><a href="#register">Register</a></li>
+          <li><a href="#register" class="registerLink">Register</a></li>
           <li><a href="#login" class="loginLink">Login</a></li>
         </ul>
 		
@@ -33,7 +33,9 @@
         <script src="js/modalLogout.js"></script>
         <script src="js/InputCtrl.js"></script>
         <script src="js/RegisterCtrl.js"></script>
-        <script src="js/LoginCtrl.js"></script> 
+        <script src="js/LoginCtrl.js"></script>
+        <script src="js/TableCtrl.js"></script>        
+        <script src="js/ProfileCtrl.js"></script>
         <script src="js/router.js"></script>
         <script src="js/script.js"></script>
     </body>	
