--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<div class="header clearfix">
 			<h1>Application</h1>
-            <button class="initDB btn btn-sm btn-success" onclick="FillDatabase(5)">Init DB</button>
+            <button class="initDB btn btn-sm btn-success" onclick="FillDatabase(5)">Init DB sample in localStorage</button>
 		</div>
 
         <ul class="navigation nav nav-tabs">
