--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<div class="header clearfix">
 			<h1>Application</h1>
-            <button class="initDB btn btn-sm btn-success" onclick="FillDatabase(5)">Init DB sample in localStorage</button>
+            <button class="initDB btn btn-sm btn-success" onclick="database.fillRandom(15)">Init DB sample in localStorage</button>
 		</div>
 
         <ul class="navigation nav nav-tabs">
@@ -36,7 +36,25 @@
         <script src="js/LoginCtrl.js"></script>
         <script src="js/TableCtrl.js"></script>        
         <script src="js/ProfileCtrl.js"></script>
+        <script src="js/UsersCtrl.js"></script>
         <script src="js/router.js"></script>
         <script src="js/script.js"></script>
+        <script>
+            var arr = [{id:1, name:"Alex"}, {id:2, name:"John"}, {id:3, name:"Jane"}]
+            function fn(arrOfObj, obj) {
+                for(var i = 0; i < arrOfObj.length; i++) {
+                    var found;
+                    for(key in obj) {
+                        if( obj[key] !==  arrOfObj[i][key]) {
+                            found = false;
+                            break;
+                        } else {
+                            found = true;
+                        }
+                    }
+                    if (found) return arrOfObj[i];
+                }
+            } 
+        </script>
     </body>	
 </html>
