--- a/login.html
+++ b/login.html
@@ -1,4 +1,4 @@
-﻿<form id="loginForm" no-validate = "">
+<form id="loginForm" no-validate = "">
 	<div class="form-group email-group has-feedback">
 		<label for="email">E-mail</label>
 		<input type="email" id="email" class="form-control" placeholder="E-mail">
