--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <script src="bower_components/bootbox/bootbox.js"></script>        
         <script src="bower_components/Faker/build/build/faker.js"></script>
         <script src="bower_components/moment/min/moment.min.js"></script>        
-        <script src="js/navigation.js"></script>
         <script src="js/validation_options.js"></script>
+        <script src="js/navigation.js"></script>
         <script src="js/validator.js"></script>
         <script src="js/database.js"></script>
         <script src="js/AuthCtrl.js"></script>
@@ -37,7 +37,9 @@
         <script src="js/LoginCtrl.js"></script>
         <script src="js/TableCtrl.js"></script>        
         <script src="js/ProfileCtrl.js"></script>
+        <script src="js/EditProfileCtrl.js"></script>
         <script src="js/UsersCtrl.js"></script>
+        <script src="js/AddUserCtrl.js"></script>
         <script src="js/router.js"></script>
         <script src="js/script.js"></script>
     </body>	
