--- a/add_user.html
+++ b/add_user.html
@@ -1,4 +1,5 @@
-<form id="registerForm" no-validate = "">
+<h1>Add New User</h1>
+<form id="addNewUserForm" no-validate = "">
 	<div class="form-group username-group has-feedback">
 		<label for="username">Name</label>
 		<input type="text" id="username" class="form-control" placeholder="Name">
@@ -23,5 +24,5 @@
 		<span class="confirm-password-icon glyphicon form-control-feedback"></span>
 		<span class="confirm-password-message"></span>
 	</div>
-	<a id="registerBtn" class="btn btn-primary btn-lg">Register</a>
+	<a id="addNewUserBtn" class="btn btn-success btn-lg">Save</a>
 </form>
