--- a/profile.html
+++ b/profile.html
@@ -1,30 +1,36 @@
 <h1>Profile</h1>
 
 <table class="profileTable table table-striped">
-	
+	<thead>
+		<tr>
+			<th></th>
+			<th>
+				<a href="#edit-profile" class="btn-edit btn btn-info" data-toggle="tooltip" data-placement="bottom" title="Edit"><span class="glyphicon glyphicon-edit"></span></a>
+			</th>
+		</tr>
+	</thead>
+	<tbody>
 	<script id="profileTmpl" type="template">
-		<tbody>
 			<tr>
 				<th scope="row">Name: </th>
-				<td>{{username}}</td>
+				<td class="usernameCell">{{username}}</td>
 			</tr>
 			<tr>
 				<th scope="row">Password: </th>
-				<td>{{password}}</td>
+				<td class="passwordCell">{{password}}</td>
 			</tr>
 			<tr>
 				<th scope="row">E-mail: </th>
-				<td>{{email}}</td>
+				<td class="emailCell">{{email}}</td>
 			</tr>
 			<tr>
 				<th scope="row">Token: </th>
-				<td>{{token}}</td>
+				<td class="tokenCell">{{token}}</td>
 			</tr>
 			<tr>
 				<th scope="row">Last login: </th>
-				<td>{{lastLogin}}</td>
+				<td class="lastLoginCell">{{lastLogin}}</td>
 			</tr>
-		</tbody>
 	</script>
-	
+	</tbody>
 </table>
